--- a/cf_config_dual_bilstm_cnn_model.json
+++ b/cf_config_dual_bilstm_cnn_model.json
@@ -17,10 +17,12 @@
     "field_to_split": "train",
     "split_fields": [
       "train",
-      "valid"
+      "valid",
+      "test"
     ],
     "split_proportions": [
-      0.9,
+      0.8,
+      0.1,
       0.1
     ]
   },
@@ -123,9 +125,10 @@
     "epochs": 2,
     "batch_size": 32,
     "metrics": [
-      "sets_accuracy"
+      "classification_f1"
     ],
     "val_every_n_epochs": 1,
-    "log_every_n_epochs": 1
+    "log_every_n_epochs": 1,
+    "tensorboard_log_dir":"logs/"
   }
 }
