--- a/cf_config_dual_bilstm_cnn_model.json
+++ b/cf_config_dual_bilstm_cnn_model.json
@@ -35,13 +35,23 @@
           "x"
         ],
         "out": [
-          "xn"
+          "x"
+        ]
+      },
+            {
+        "name": "stop_words_remover",
+        "id": "stop_words_remover",
+        "in": [
+          "x"
+        ],
+        "out": [
+          "x"
         ]
       },
       {
         "name": "embedder",
         "in": [
-          "xn"
+          "x"
         ],
         "out": [
           "xv"
